<resources>
    <string name="test">Test</string>
    <string name="back_button">Back</string>
    <string name="app_name">MyStock</string>
    <string name="search_title">Stock Market Search</string>
    <string name="get_quote">Get Quote</string>
    <string name="clear">Clear</string>
    <string name="title_activity_information_controller">InformationController</string>
    <string name="current_tab">CURRENT</string>
    <string name="historical_tab">HISTORICAL</string>
    <string name="news_tab">NEWS</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="stock_detail">Stock Details</string>
    <string name="error_info">Failed to load data</string>
    <string name="news_error_info">Failed to load news data</string>
    <string name="his_error_info">Failed to load historical data</string>
    <string name="fav_list">Favorites</string>
    <string name="auto_Refresh">AutoRefresh</string>
    <string-array name="sort_key">
        <item>Sort by</item>
        <item>Default</item>
        <item>Symbol</item>
        <item>Price</item>
        <item>Change</item>
        <item>Change (%)</item>
    </string-array>
    <string-array name="sort_method">
        <item>Order</item>
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
    <string name="indicator_spinner">Indicators</string>
    <string name="change_button">Change</string>
    <string-array name="indicators">
        <item>Price</item>
        <item>SMA</item>
        <item>EMA</item>
        <item>STOCH</item>
        <item>RSI</item>
        <item>ADX</item>
        <item>CCI</item>
        <item>BBANDS</item>
        <item>MACD</item>
    </string-array>
    <string name="facebook_app_id">761641307344370</string>
</resources>
