<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tab1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10sp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/listView">

                <TextView
                    android:id="@+id/stockTitleView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="3"
                    android:layout_marginHorizontal="5sp"
                    android:text="@string/stock_detail"
                    android:textColor="@android:color/background_dark"
                    android:textSize="30sp" />

                <ImageButton
                    android:id="@+id/facebookButton"
                    android:layout_width="35sp"
                    android:layout_height="45sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="5sp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/facebook" />

                <ImageButton
                    android:id="@+id/favoriteButton"
                    android:layout_width="40sp"
                    android:layout_height="50sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="5sp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/empty" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ListView
                    android:id="@+id/basicInfoListView"
                    android:layout_width="match_parent"
                    android:layout_height="360sp"
                    android:layout_weight="2">

                </ListView>

                <ProgressBar
                    android:id="@+id/basicInfoProgressBar"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="360sp"
                    android:layout_centerHorizontal="true"
                    android:indeterminateTint="@color/colorPrimary"
                    android:layout_gravity="center_vertical" />

                <TextView
                    android:id="@+id/basicInfoErrorText"
                    android:layout_width="match_parent"
                    android:layout_height="360sp"
                    android:text="@string/error_info"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_dark"
                    android:textSize="30sp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/indicatorTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/indicator_spinner"
                    android:textColor="@android:color/background_dark"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/indicatorsSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/indicators"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/changeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:text="@string/change_button" />
            </LinearLayout>


            <WebView
                android:id="@+id/indicatorWebView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </WebView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/indicatorProgressBar"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="360sp"
                    android:layout_centerHorizontal="true"
                    android:indeterminateTint="@color/colorPrimary"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/indicatorErrorText"
                    android:layout_width="wrap_content"
                    android:layout_height="360sp"
                    android:text="@string/error_info"
                    android:gravity="center"
                    android:layout_centerHorizontal="true"
                    android:textColor="@android:color/background_dark"
                    android:textSize="30sp" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>